--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <td>
                 <div class="datos">
                     <h1>Ganaste!</h1>
-                    <button class="btn start">Jugar de Nuevo</button>
+                    <button class="btn"><a href="index.html">Jugar de Nuevo</a></button>
                     <p>
                     <h3>Puntaje</h3>
                     <p id="score"></p>
